fix blurred text & fields on screen