@@ -38,6 +38,8 @@ public class ServerPingGUI extends Screen {
         this.serverAddressField.setMaxLength(128);
         this.serverAddressField.setText("mc.hypixel.net");
         this.addSelectableChild(this.serverAddressField);
+        this.addDrawableChild(this.serverAddressField);
+
         this.addDrawableChild(ButtonWidget.builder(Text.of("Ping Server"), button -> this.pingServer(serverAddressField.getText())).dimensions( 200 + 10 + 10, 10, 70, 20).build());
         this.addDrawableChild(ButtonWidget.builder(Text.of("Port Scan"), button -> this.portScan(25400, 25600, 10)).dimensions( 200 + 10 + 10 + 75, 10, 70, 20).build());
     }
@@ -74,12 +76,10 @@ public class ServerPingGUI extends Screen {
     }
 
     public void render(DrawContext context, int mouseX, int mouseY, float delta) {
-        this.renderBackground(context, mouseX, mouseY, delta);
-        context.drawCenteredTextWithShadow(this.textRenderer, this.title, this.width / 2, 17, 16777215);
-        //drawTextWithShadow(matrices, this.textRenderer, Text.of("Enter Name of Recipient"), width/2-100, this.height / 4 + 120 - 34, 10526880);
-        this.serverAddressField.render(context, mouseX, mouseY, delta);
-
         super.render(context, mouseX, mouseY, delta);
+
+        context.drawCenteredTextWithShadow(this.textRenderer, this.title, this.width / 2, 17, 16777215);
+
         context.enableScissor(0, 68, width, height);
         for(PingResponseEntry responseEntry : new ArrayList<>(responses)) {
             responseEntry.render(context, mouseX, mouseY, delta);
@@ -107,8 +107,8 @@ public class ServerPingGUI extends Screen {
     @Override
     public boolean mouseScrolled(double mouseX, double mouseY, double amountX, double amountY) {
         amountY *= 10;
-        double top = responses.get(0).getY() + amountY;
-        double bottom = responses.get(responses.size()-1).getY() + responses.get(responses.size()-1).getHeight() + amountY;
+        double top = responses.getFirst().getY() + amountY;
+        double bottom = responses.getLast().getY() + responses.getLast().getHeight() + amountY;
         if(bottom > height-20 && top < 70+10) {
             for (PingResponseEntry settingItem : responses) {
                 settingItem.setY(settingItem.getY() + amountY);
